# ggoto

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  demo.tape
src/: app.rs  health.rs  history.rs  main.rs  server.rs  tunnel.rs
src/ssh/: config.rs  connection.rs  mod.rs  mosh.rs
src/tui/: event.rs  mod.rs  ui.rs
